Scripts created to run safe start, where application run tests if it succeds it stats the application